--- a/src/style.css
+++ b/src/style.css
@@ -272,7 +272,7 @@
 }
 }
 /* -------------------publicaciones ----------------------------------------------------------------------- */
-  .posteo{
+  .userPost{
     border: solid 1px rgb(145, 144, 144);
     margin: 0px 0px 20px 0px;
     background: #f9f9f9;
