--- a/src/style.css
+++ b/src/style.css
@@ -284,7 +284,10 @@
     justify-content: space-between;
     align-items: center;
     position: relative;
-    background: #EB7C6A;
+    background: #cb2d3e;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #ef473a, #cb2d3e);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #ef473a, #cb2d3e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
     /* background: rgb(236, 120, 78); */
 
   }
